# backend-api-automation-portfolio

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: api-tests.yml
backend_api_automation/clients/: auth_client.py  base_client.py  booking_client.py  health_client.py  users_client.py
backend_api_automation/config/: settings.py
backend_api_automation/fixtures/: api_fixtures.py
backend_api_automation/models/: auth_models.py  booking_models.py  user_models.py
backend_api_automation/utils/: assertions.py  data_builder.py  logger.py  retry.py
test_data/: booking_payloads.py
tests/: conftest.py
tests/test_auth/: test_auth.py
tests/test_bookings/: test_booking_filtering.py  test_booking_lifecycle.py  test_booking_negative.py  test_booking_update.py
tests/test_health/: test_health_check.py
tests/test_users/: test_users_api.py
