[tool.poetry]
name = "backend-api-automation-portfolio"
version = "0.1.0"
description = "Public backend/API automation portfolio framework using Pytest, Requests, and Pydantic."
authors = ["Laura Utar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytest = "^8.3.4"
pydantic = {extras = ["email"], version = "^2.10.4"}
python-dotenv = "^1.0.1"
pytest-html = "^4.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
